[tool.poetry]
name = "equity"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
notebook = "^6.4.12"
geopandas = "^0.11.1"
matplotlib = "^3.6.0"
uszipcode = "^1.0.1"
mpu = "^0.23.1"
pandas = "^1.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
